# clar

./: CMakeLists.txt  COPYING  README.md  _clar.py  _clay.py  clar.c  clar.h  clar.py  clar_categorize.c  clar_fs.c  clar_print_default.c  clar_print_tap.c  clar_sandbox.c  clay.c  clay.h  clay.py  clay_fixtures.c  clay_fs.c  clay_print_default.c  clay_print_tap.c  clay_sandbox.c  gen_clar.py  gen_clay.py  generate.py
.github/workflows/: ci.yml
clar/: fs.h  print.h  sandbox.h  summary.h  time.h
example/: CMakeLists.txt
src/: clar_categorize.c  clar_print_default.c
test/: .gitignore  CMakeLists.txt  Makefile  clar_test.h  main.c  sample.c  selftest.c
test/expected/: help  quiet  specific_test  stop_on_failure  summary.xml  summary_with_filename  summary_without_filename  tap  without_arguments
test/selftest_suite/: CMakeLists.txt  main.c  selftest_suite.c  selftest_suite.h
test/suites/: CMakeLists.txt  combined.c
